# trailrunner

./: .flake8  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml
docs/: api.rst  conf.py  index.rst
docs/_static/: custom.css
trailrunner/: __init__.py  __main__.py  __version__.py  compat.py  core.py
trailrunner/tests/: __init__.py  __main__.py  core.py
